chore(deps): java (#381)
Automated changes by
[create-pull-request](https://github.com/peter-evans/create-pull-request)
GitHub action

---------

Co-authored-by: xenoterracide <5517+xenoterracide@users.noreply.github.com>